feature(pr-template): added pull request template

--- a/server/api/carousel/models/carousel.settings.json
+++ b/server/api/carousel/models/carousel.settings.json
@@ -1,9 +1,8 @@
 {
   "kind": "singleType",
-  },
   "options": {
     "increments": true,
-    "timestamps": true,
+    "timestamps": true
   },
   "pluginOptions": {},
   "attributes": {
